syntax = "proto3";

option go_package = "placeNote/src/gen/proto;placeNote";

import "validate/validate.proto";

package placeNote;

service UserService {
    rpc RegisterUser(RegsiterUserRequest) returns (UserResponse) {}
}

enum AuthMethod {
    UNKNOWN = 0;
    GOOGLE = 1;
    EMAIL = 2;
  }

message RegsiterUserRequest {
    string authToken = 1  [(validate.rules).string.min_len = 1];
    AuthMethod authMethod = 2 [(validate.rules).enum = {defined_only: true, not_in: [0]}];
    string userSettingId = 3  [(validate.rules).string.min_len = 1];
    string name = 4 [(validate.rules).string.min_len = 1];
}

message UserResponse {
    string token = 1;
    AuthMethod authMethod = 2;
    string userSettingId = 3;
    string name = 4;
}
